# clipnote

./: .gitignore  README.md  SKILL.md  analyze.py  capture.py  common.py  export.py  pipeline.py  pyproject.toml  render.py  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
docs/: apple-brief.md
feedback/: feedback.jsonl
skills/clipnote/: SKILL.md
src/clipnote/: analyze.py  autopick.py  capture.py  common.py  contract.py  export.py  feedback.py  pipeline.py  render.py
tests/: batch.py  contact_sheet.py  test_core.py  validate_fixtures.py
tests/evaluations/: 4ioPBiTWm3M.recipe.ko.json  DRHGDOkQl3c.generic.ko.json  Ft9qhSnF5gE.generic.ko.json  GC_Szxdqh2Y.generic.ko.json  tDo0uRYnaoQ.generic.ko.json  tU1fvfbNBtY.generic.ko.json
tests/fixtures/: urls.json
