[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clipnote"
version = "0.2.0"
description = "Turn how-to YouTube videos into follow-along documents with visual guides at ambiguous moments."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "yt-dlp>=2026.7.4",
    "reportlab>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/zlej123/clipnote"

[project.scripts]
clipnote = "clipnote.pipeline:main"
clipnote-analyze = "clipnote.analyze:main"
clipnote-capture = "clipnote.capture:main"
clipnote-render = "clipnote.render:main"
clipnote-export = "clipnote.export:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clipnote = ["skill-core/**/*"]
